Complete trusted runtime mod conversion pipeline